update sonar issues